# ts-sqlx

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  docker-compose.yaml
.github/workflows/: test.yml
node/: .eslintignore  .eslintrc.cjs  .gitignore  .npmignore  .prettierignore  README.md  biome.json  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.esm.json  tsconfig.json
node/example/: .env  .ts-sqlx.json  README.md  package.json  pnpm-lock.yaml  tsconfig.json
node/example/.ts-sqlx/: src_index.ts.d.ts  src_javascript.js.d.ts
node/example/migrations/: 20240211114646_core.down.sql  20240211114646_core.up.sql
node/example/src/: db.ts  index.ts  javascript.js
node/src/: index.ts
src/: completions.rs  config.rs  lib.rs  opt.rs  parse_source.rs  run.rs  runtime.rs  scan_folder.rs  ts.rs
src/database/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
